plugins {
    id 'java-library'
}

dependencies {
    implementation project(':shared')
    implementation 'androidx.annotation:annotation:1.9.1'
    implementation "commons-codec:commons-codec:1.18.0"
    implementation "org.apache.commons:commons-lang3:3.17.0"
    implementation 'org.json:json:20230618'
    implementation 'org.bouncycastle:bcprov-jdk14:1.77'
}

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

tasks.withType(JavaCompile) {
    options.compilerArgs += [
        '-parameters',
        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
    ]
}
